--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     timeout-minutes: 30
     strategy:
       matrix:
-        node-version: ['14', '16', '18']
+        node-version: ['14', '16']
 
     steps:
       - uses: actions/checkout@v3
@@ -42,7 +42,7 @@ jobs:
     timeout-minutes: 30
     strategy:
       matrix:
-        node-version: ['14', '16', '18']
+        node-version: ['14', '16']
 
     steps:
       - uses: actions/checkout@v3
@@ -76,7 +76,7 @@ jobs:
     timeout-minutes: 30
     strategy:
       matrix:
-        node-version: ['14', '16', '18']
+        node-version: ['14', '16']
 
     steps:
       - uses: actions/checkout@v3
